--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,10 @@
    "outputs": [],
    "source": [
     "def derivative_at(terms, x):\n",
-    "    None\n",
+    "    derivative_fn = find_derivative(terms)\n",
+    "    total = 0\n",
+    "    for term in derivative_fn:\n",
+    "        total += term[0]*x**term[1]\n",
     "    return total"
    ]
   },
